переписал paymentMethod
