# shared/api/bundles/order.openapi.v1.bundle.yaml
@@ -314,21 +314,21 @@ components:
         - part_uuids
       properties:
         payment_method:
-          type: integer
+          type: string
           enum:
-            - 0
-            - 1
-            - 2
-            - 3
-            - 4
+            - UNKNOWN
+            - CARD
+            - SBP
+            - CREDIT_CARD
+            - INVESTOR_MONEY
           description: |
             Способ оплаты:
-            0 – Неизвестный
-            1 – Банковская карта
-            2 – СБП
-            3 – Кредитная карта
-            4 – Деньги инвестора
-          example: 1
+            UNKNOWN – Неизвестный
+            CARD – Банковская карта
+            SBP – Система быстрых платежей
+            CREDIT_CARD – Кредитная карта
+            INVESTOR_MONEY – Деньги инвестора
+          example: CARD
     pay_order_response:
       type: object
       required:
